--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,51 @@
     <artifactId>openutils-deployment</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Openutils deployment tools</name>
+    <name>openutils deployment tools</name>
+    <description></description>
+    <url>http://openutils.sourceforge.net</url>
+    <issueManagement>
+        <system>sourceforge</system>
+        <url>http://sourceforge.net/tracker/?group_id=150467&amp;atid=784057</url>
+    </issueManagement>
+    <scm>
+        <connection>scm:cvs:pserver:anonymous:@cvs.sourceforge.net:/cvsroot/openutils:openutils-deployment</connection>
+        <developerConnection>
+            scm:cvs:ext:${maven.username}@cvs.sourceforge.net:/cvsroot/openutils:openutils-deployment
+        </developerConnection>
+        <url>http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/openutils/openutils-deployment/</url>
+    </scm>
+    <organization>
+        <name>Fabrizio Giustina</name>
+        <url>http://openutils.sourceforge.net</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>Apache Software License</name>
+            <distribution>repo</distribution>
+            <url>LICENSE.txt</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>fgiust</id>
+            <name>Fabrizio Giustina</name>
+            <email>fgiust@apache.org</email>
+            <organization>openmind</organization>
+            <roles>
+                <role>Project admin and developer</role>
+            </roles>
+            <timezone>+1</timezone>
+        </developer>
+    </developers>
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+            </extension>
+        </extensions>
+    </build>
     <dependencies>
         <dependency>
             <groupId>log4j</groupId>
@@ -45,12 +89,12 @@
         <site>
             <id>default</id>
             <name>sourceforge</name>
-            <url>scp://shell.sourceforge.net/home/groups/o/op/openutils/htdocs/openutils-deployment</url>
+            <url>scpexe://shell.sourceforge.net/home/groups/o/op/openutils/htdocs/openutils-deployment</url>
         </site>
         <downloadUrl>http://prdownloads.sourceforge.net/150467</downloadUrl>
         <repository>
             <id>sourceforge</id>
-            <url>scp://shell.sourceforge.net/home/groups/o/op/openutils/htdocs/m2repo</url>
+            <url>scpexe://shell.sourceforge.net/home/groups/o/op/openutils/htdocs/m2repo</url>
         </repository>
     </distributionManagement>
 </project>
