--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,9 @@
             <version>1.3.1</version>
         </dependency>
         <dependency>
-            <groupId>springframework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>1.2.4</version>
+            <version>1.2.6</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
