--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>2.0-m5</version>
+      <version>2.0</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
