--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <parent>
     <groupId>net.sourceforge.openutils</groupId>
     <artifactId>openutils</artifactId>
-    <version>2</version>
-    <relativePath>../openutils-parent</relativePath>
+    <version>3</version>
+    <relativePath>..</relativePath>
   </parent>
   <artifactId>openutils-deployment</artifactId>
   <name>openutils deployment tools</name>
