--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <artifactId>openutils-deployment</artifactId>
   <name>openutils deployment tools</name>
-  <version>1.0.5-SNAPSHOT</version>
+  <version>1.0.6</version>
   <description />
   <dependencies>
     <dependency>
@@ -22,12 +22,6 @@
       <version>2.0.1</version>
       <optional>true</optional>
       <exclusions>
-      <!-- 
-        <exclusion>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-        </exclusion>
- 	  -->        
         <exclusion>
           <groupId>logkit</groupId>
           <artifactId>logkit</artifactId>
@@ -57,4 +51,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <scm>
+    <connection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-1.0.6</connection>
+    <developerConnection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-1.0.6</developerConnection>
+    <url>http://openutils.svn.sourceforge.net/viewcvs.cgi/openutils/tags/openutils-deployment-1.0.6</url>
+  </scm>
 </project>
