--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <artifactId>openutils-deployment</artifactId>
   <name>openutils deployment tools</name>
-  <version>2.1.1</version>
+  <version>2.1.2-SNAPSHOT</version>
   <description />
   <dependencies>
     <dependency>
@@ -83,10 +83,4 @@
   <properties>
     <spring.version>2.5.6</spring.version>
   </properties>
-
-  <scm>
-    <connection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-2.1.1</connection>
-    <developerConnection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-2.1.1</developerConnection>
-    <url>http://openutils.svn.sourceforge.net/viewcvs.cgi/openutils/tags/openutils-deployment-2.1.1</url>
-  </scm>
 </project>
