--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <artifactId>openutils-deployment</artifactId>
   <name>openutils deployment tools</name>
-  <version>2.1.2</version>
+  <version>2.1.3-SNAPSHOT</version>
   <description>Openutils deployment tools</description>
   <licenses>
     <license>
@@ -114,10 +114,4 @@
   <properties>
     <spring.version>2.5.6</spring.version>
   </properties>
-
-  <scm>
-    <connection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-2.1.2</connection>
-    <developerConnection>scm:svn:https://openutils.svn.sourceforge.net/svnroot/openutils/tags/openutils-deployment-2.1.2</developerConnection>
-    <url>http://openutils.svn.sourceforge.net/viewcvs.cgi/openutils/tags/openutils-deployment-2.1.2</url>
-  </scm>
 </project>
