--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
+      <version>4.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
   <properties>
-    <spring.version>2.5.6</spring.version>
+    <spring.version>3.0.0.RELEASE</spring.version>
   </properties>
 </project>
